Fixed burger shading overflow

--- a/src/Components/BurgerMenu/_BurgerMenu.scss
+++ b/src/Components/BurgerMenu/_BurgerMenu.scss
@@ -8,7 +8,7 @@
 }
 
 .burger-menu {
-    color: white;
+    color: rgb(63, 63, 65);
     position: relative;
     width: 0;
     height: 0;
@@ -22,4 +22,8 @@
     ul{
         list-style: none;
     }
+}
+
+.bm-overlay{
+    display: none;
 }
